[project]
name = "bilibili-mcp"
version = "0.2.0"
description = "MCP server for Bilibili API access with async support, credential management and rich toolset"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "bilibili-api-python>=17.4.2",
    "mcp[cli]>=1.6.0",
    "aiohttp>=3.9.0",
    "brotlicffi>=1.1.0",
    "python-dotenv>=1.0.0",
]

[tool.mcp]
transport = "stdio"
log_level = "INFO"
